[package]
name = "cryl"
version = "0.1.0"
description = "Secret generation tool"
repository = "https://github.com/haras-unicorn/cryl"
authors = ["haras-unicorn <github@haras-unicorn.net>"]
license-file = "../../LICENSE.md"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.0"
which = "6.0"
mustache = "0.9"

[dev-dependencies]
mockall = "0.12"
assert_cmd = "2.0"
predicates = "3.0"
